--- a/ScheduledTask-1.0/ScheduledTask-core/pom.xml
+++ b/ScheduledTask-1.0/ScheduledTask-core/pom.xml
@@ -59,6 +59,12 @@
             <version>1.8.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
