--- a/ScheduledTask-2.0/scheduled-task-core/pom.xml
+++ b/ScheduledTask-2.0/scheduled-task-core/pom.xml
@@ -50,6 +50,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-api.version}</version>
+<!--            <version>2.0.7</version>-->
         </dependency>
 
         <dependency>
