--- a/scheduled-task/scheduled-task-core/pom.xml
+++ b/scheduled-task/scheduled-task-core/pom.xml
@@ -9,6 +9,7 @@
         <version>3.0</version>
     </parent>
 
+    <groupId>com.xiaohe</groupId>
     <artifactId>scheduled-task-core</artifactId>
     <version>3.0</version>
 
