依赖于spring的执行器

--- a/scheduled-task/pom.xml
+++ b/scheduled-task/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>scheduled-task-core</module>
         <module>scheduled-task-admin</module>
+        <module>scheduled-task-sample</module>
     </modules>
 
 
